# base-python-task-scheduling-service

./: .gitignore  README.md  pyproject.toml
src/: app.py  celery.py  task_handler.py  tasks.py
src/celery_example/: app.py  celery.py  db.py  task_handler.py  tasks.py
src/celery_example/api/: data.py  tasks.py
src/celery_example/celery/: celery.py  task_handler.py
src/celery_example/models/: tasks.py
src/celery_example/util/: data.py  db.py  redis_helper.py  tasks.py
tests/: test_basic.py  test_basic_by_reference.py  test_basic_by_value.py
